# enum-visitor

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  README.zh.md  tt  tt.txt
.github/workflows/: ci.yml
enum-visitor/: Cargo.toml  README.md
enum-visitor-derive/: Cargo.toml  README.md
enum-visitor-derive/src/: lib.rs
enum-visitor/examples/: shapes.rs
enum-visitor/src/: lib.rs
enum-visitor/tests/: visit.rs
