[package]
name = "enum-visitor-derive"
version = "0.1.0"
edition = "2021"
description = "Proc-macro derive to generate visit_<enum>! helper macro for enums."
license = "MIT"
authors = ["netcan"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
