[package]
name = "enum-visitor-derive"
version = "0.1.0"
edition = "2021"
description = "Proc-macro derive to generate visit_<enum>! helper macro for enums."
license = "MIT"
authors = ["netcan"]
readme = "README.md"
keywords = ["proc-macro", "macro", "enum", "visit"]
categories = ["development-tools::procedural-macro"]
repository = "https://github.com/netcan/enum-visitor"
homepage = "https://github.com/netcan/enum-visitor"
documentation = "https://docs.rs/enum-visitor-derive"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
