[package]
name = "enum-visitor"
version = "0.1.0"
edition = "2021"
description = "A small helper to generate visit-like match for enums, inspired by C++ std::visit."
license = "MIT"
authors = ["netcan"]
readme = "README.md"
keywords = ["macro", "enum", "visit", "pattern-matching"]
categories = ["development-tools"]
repository = "https://github.com/netcan/enum-visitor"
homepage = "https://github.com/netcan/enum-visitor"
documentation = "https://docs.rs/enum-visitor"

[dependencies]
enum-visitor-derive = { version = "0.1", path = "../enum-visitor-derive" }
